new tasks for students git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@5791 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/todo
+++ b/todo
@@ -29,84 +29,7 @@ NN (NN)
 einfaches Merge von lokalen Beweisen eines abgespeichteren DG 
   in aktuellen DG
 
-************************************************
-Tina (Till)
-************************************************
 
-List.casl should go through
-
-rename clashing names
-
-set up default simplifier
-set up default tactics using axioms
-  (see DOLCE sample files)
-
-
-************************************************
-Sonja (Till)
-************************************************
-
-in Isabelle/IsaPrint.hs:
-rename variables that conflict with operation syntax
-   (or restrict mixfix decls for consts)
-
-die Mixfix-Deklarationen führen noch zu Problemen.
-Z.B.
-
-consts
-  c::t     ("c")
-
-führt dazu, dass c nicht mehr als Variable verwendet werden kann.
-Könntest du diese Mixfix-Deklarationen auf die notwendigen Fälle
-beschränken, und ggf. die Variablen umbenennen?
-
-Zudem müssen Underscores escaped werden:
-
-consts
-  C_1::t    ("C'_1")
-
-Diplom: Encoding for HasCASL in Isabelle/HOL(CF)
-
-Interface Hets <-> ISabelle
-
-in IsaProve.hs
-  Hets muss eine Pipe als Inode erzeugen
-  und dann auf Beweisterme warten
-  und auf "Ende" warten
-  und dann Proof_status sen proof_tree entsprechend ausfüllen
-    (siehe Logic/Prover.hs)
-
-Isabelle (im .thy file, dass von IsaProve.hs erzeugt wird)
-  Beweisterme (siehe Kapitel im RefMan)
-  ML "proofs := 1" (am Anfang des .thy file)
-  am Ende jedes Theorems: Beweisterm in die Pipe schreiben
-    (Pipenamen direkt angeben, vom thy-file-Namen abgeleitet)
-    mit pretty_proof_of und Pretty.string_of
-    und Start- und Endmarker
-  am Schluss "Ende" ausgeben
-
-
-Funktion basicInferenceNode in Proofs/Proofs.hs:
-  Theorem link nur dann grün, wenn alle Goals bewiesen wurden
-
-Emacs: uni/emacs, George fragen (ger@)
-
-************************************************
-Jorina (Till)
-************************************************
-
-GUI: 
-  use save button for saving proof info
-
-improve efficiency (e.g. of UserManual/Sbcs.casl), using profiling
-
-development graph calculus
-- Stack overflow for "show just subtree"
-- view-test7.casl should be provable with globDecomp + locDecopm
-- fail when doing first globDecomp, then local decomp in RelationsAndOrders
-- correct MAYA: glob decomp: some links are not found (Jorina)
-- Fail: No match in record selector Static.DevGraph.dgn_sign
-  for local subsume in RelationsAndOrders
 
 ************************************************
 Mingyi (Till)
@@ -198,9 +121,33 @@ emacs mode:
 
   should work with parser error messages as well (adapt these?)
 
-LaTeX: see listings.sty for LaTeX generation (cf. CoSiT paper)
+************************************************
+Hilfskraft 1
+************************************************
 
--------------------------------------------------------------------
+Modal-CASL <-> CASL-DL <-> OWL-DL
+
+************************************************
+Hilfskraft 2
+************************************************
+
+MathServ-Anbindung
+
+************************************************
+Hilfskraft 3
+************************************************
+
+Uni-Refactoring
+
+************************************************
+Hilfskraft 4
+************************************************
+
+Entwicklungsgraph-Kalkül
+
+************************************************
+Hilfskraft 5
+************************************************
 
 LaTeX pretty printer
 
@@ -210,6 +157,70 @@ für die CASL Datentypen zu bekommen.
 
 HasCASL hat auch noch keine Mixfix- und Latex Ausgabe.
 
+LaTeX: see listings.sty for LaTeX generation (cf. CoSiT paper)
+
+************************************************
+remaining stuff
+************************************************
+
+
+set up default simplifier
+set up default tactics using axioms
+  (see DOLCE sample files)
+
+
+in Isabelle/IsaPrint.hs:
+rename variables that conflict with operation syntax
+   (or restrict mixfix decls for consts)
+
+die Mixfix-Deklarationen führen noch zu Problemen.
+Z.B.
+
+consts
+  c::t     ("c")
+
+führt dazu, dass c nicht mehr als Variable verwendet werden kann.
+Könntest du diese Mixfix-Deklarationen auf die notwendigen Fälle
+beschränken, und ggf. die Variablen umbenennen?
+
+Zudem müssen Underscores escaped werden:
+
+consts
+  C_1::t    ("C'_1")
+
+Diplom: Encoding for HasCASL in Isabelle/HOL(CF)
+
+Interface Hets <-> ISabelle
+
+in IsaProve.hs
+  Hets muss eine Pipe als Inode erzeugen
+  und dann auf Beweisterme warten
+  und auf "Ende" warten
+  und dann Proof_status sen proof_tree entsprechend ausfüllen
+    (siehe Logic/Prover.hs)
+
+Isabelle (im .thy file, dass von IsaProve.hs erzeugt wird)
+  Beweisterme (siehe Kapitel im RefMan)
+  ML "proofs := 1" (am Anfang des .thy file)
+  am Ende jedes Theorems: Beweisterm in die Pipe schreiben
+    (Pipenamen direkt angeben, vom thy-file-Namen abgeleitet)
+    mit pretty_proof_of und Pretty.string_of
+    und Start- und Endmarker
+  am Schluss "Ende" ausgeben
+
+
+Funktion basicInferenceNode in Proofs/Proofs.hs:
+  Theorem link nur dann grün, wenn alle Goals bewiesen wurden
+
+improve efficiency (e.g. of UserManual/Sbcs.casl), using profiling
+
+development graph calculus
+- Stack overflow for "show just subtree"
+- view-test7.casl should be provable with globDecomp + locDecopm
+- fail when doing first globDecomp, then local decomp in RelationsAndOrders
+- correct MAYA: glob decomp: some links are not found (Jorina)
+- Fail: No match in record selector Static.DevGraph.dgn_sign
+  for local subsume in RelationsAndOrders
 
 ************************************************
 Daniel
