refined Modal to DL task a little git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@5805 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/todo
+++ b/todo
@@ -129,6 +129,8 @@ Hilfskraft 1
 ************************************************
 
 Modal-CASL <-> CASL-DL
+  see Chapter 4 of "The Description Logic Handbook"
+      and ask Klaus for a print out of it
 
 ************************************************
 Hilfskraft 2
