Florian git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@5819 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/todo
+++ b/todo
@@ -27,12 +27,15 @@ Repräsentation ändern:
 Florian (Till)
 ************************************************
 
+HetCATS, uni und CASL-lib auschecken
 abstrakte Syntax für ConstraintCASL (s. CASL-lib/ConstraintCASL/)
   nach HetCATS/ConstraintCASL/AS_ConstraintCASL.der.hs
 Parser für ConstraintCASL
   nach HetCATS/ConstraintCASL/Parse_AS_Basic.hs
-beides in HetCATS/ConstraintCASL/Logic_ConstraintCASL.hs einhängen
-  (mit Till)
+Testen mit
+  hets -o ast.het CASL-lib/ConstraintCASL/RCC8.het
+Freiburger Constraint-Solver angucken
+Bremer Constraint-Solver angucken
 
 ************************************************
 Mingyi (Till)
