recorded proof status refactoring git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@5950 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/todo
+++ b/todo
@@ -14,13 +14,15 @@ Suchfunktion für einen Knoten im DG:
 BasicProof in Proofs.Proofs: sind Datenstrukturen für informelle Beweise OK?
 Konfidenzgrade von Beweisen?
 
-von Till/Jorina (jfgerken@tzi.de) zu erledigen:
+von Till/HiWi zu erledigen:
 Repräsentation ändern:
-  Beweisobjekte an DGs, nicht an Regeln
-  Für Theoreme in Theorien an Beweisobjekte
-  BasicProof mit Liste von Beweisobjekten
+  Beweisobjekte an DGs, nicht an Regeln -- done
+  Für Theoreme in Theorien an Beweisobjekte -- done
+  BasicProof mit Liste von Beweisobjekten -- überflüssig
+  Definitionen auszeichnen -- done
+    Für alles siehe G_theory, ThSens und SenStatus.
   Isabelles Beweisobjekte einbinden
-  Definitionen auszeichnen
+
 
 
 ************************************************
@@ -222,8 +224,9 @@ refactoring of dgraphs: add unique tags (but no table)
 display library graph
 
 
-unify GUI/AbstractGraphView.hs and Taxonomy/AbstractGraphView.hs (make
-it really abstract), possibly contact amahnke@tzi.de regarding
+unify GUI/AbstractGraphView.hs and Taxonomy/AbstractGraphView.hs 
+and uni/appl/ontologytool/AbstractGraphView.hs
+(make it really abstract), possibly contact amahnke@tzi.de regarding
 Taxonomy, possibly use uni/appl/ontologytool instead of Taxonomy!
 
 
