Hint for Ken git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@6049 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/todo
+++ b/todo
@@ -182,6 +182,8 @@ fix bug: when lodaing Basic/RelationsAndOrders.casl and
     and origin DGProof of development graph does not exist in abstraction graph
   look at Proofs/Global.hs, GUI/ConvertAbstractToDevgraph,
     function applyChanges
+  Hint: first try to cut down the example (find out the minimal
+    subpart that still leads to the error)
 
 test development grapg GUI: 
    menu edit - unnamed nodes - hide/show nodes,
