HasCASL tool discussion git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@6190 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/todo
+++ b/todo
@@ -318,6 +318,20 @@ Automatic generation of Haskell (for a HasCASL subset)
 Proofs in HasCASL
 Case study
 
+
+Coding HasCASL -> Isabelle with definedness axioms
+  only strict functions are defined
+
+Isabelle interface
+  One emacs with spec and proof buffer
+  Reload button should rebuild buffers while keeping as much as possible
+  keep structuring of Hets theories
+
+Integration with PGIP
+  display specs + proofs in one buffer
+  when stepping through the specs, dg calculus generates proof obligations,
+    which then can be discharged by Isabelle
+
 ************************************************
 Rainer (Klaus)
 ************************************************
