__* empty log message __* git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@6338 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/todo
+++ b/todo
@@ -460,6 +460,9 @@ Integration with generic prover interface?
 Till
 ************************************************
 
+paper with Paolo
+  semantic adequecy of HOL translation
+
 Regulate concurrent proving
 .dg files: store only current library; import .dg files for other libraries
 
