added -t option git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@6339 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/doc/UserGuide.tex
+++ b/doc/UserGuide.tex
@@ -890,6 +890,40 @@ available from \texttt{www.cofi.info/Libraries}.
 The output format is XML, the URL of the DTD is included in the
 XML file.
 
+\item[\texttt{-t TRANS}, \texttt{--translation=TRANS}]
+chooses a translation option. \texttt{TRANS} is a colon-separated list 
+without blanks of one or more from:
+
+CASL2CoCASL,
+CASL2CspCASL,
+CASL2HasCASL,\\
+CASL2Modal,
+CASL2PCFOL,
+CASL2PCFOL,\\
+CASL2SPASS,
+CASL2SubCFOL,
+CASL2SubCFOL,\\
+CASL2TopSort,
+CFOL2IsabelleHOL,
+CoCASL2CoPCFOL,\\
+CoCFOL2IsabelleHOL,
+CoPCFOL2CoCFOL,
+CspCASL2IsabelleHOL,\\
+CspCASL2Modal,
+HasCASL2HasCASL,
+HasCASL2Haskell,\\
+HasCASL2IsabelleHOL,
+Haskell2IsabelleHOLCF,
+Hs2HOLCF,\\
+Modal2CASL,
+Modal2CASL,
+PCFOL2CFOL,\\
+PCFOL2CFOL,
+PCFOL2FOL.
+
+
+
+
 \item[\texttt{-r RAW} or \texttt{--raw=RAW}] This option  allows one
 to influence the formatting in more detail.
 Here, \texttt{RAW} is \texttt{(ascii|text|(la)?tex)=STRING},
@@ -1140,7 +1174,7 @@ tool based on development graphs.  \MAYA only supports development
 graphs without hiding and without logic translations.  \MAYA has been
 developed by Serge Autexier and Dieter Hutter.
 
-I also want to thank Agn\`es Arnould, Thibaud Brunet, Pascale LeGalle,
+I also want to thank Agn\`es Arnould, Thibaud Brunet, Pascale LeGall,
 Kathrin Hoffmann, Katiane Lopes, Klaus L\"uttich, Christian Maeder,
 Stefan Merz, Maria Martins Moreira, Christophe 
 Ringeissen, Markus Roggenbach, Dmitri Schamschurko, Lutz Schr\"oder,
